fixed some responsive issues and restyled project pages

--- a/crowdfunding.html
+++ b/crowdfunding.html
@@ -25,36 +25,42 @@
     <main>
         <h1>Crowdfunding website</h1>
         <section id="projects">
-        <div>
-            <iframe src="https://youtube.com/embed/c-oBmtCUVyU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen alt="Youtube video of Flappy Bird game play with walk-through of code improvements"></iframe>
-
-            <!-- <h2>Screenshots</h2> -->
-            <a href="screenshots/Healium-home-page.png" target="_blank">
-                <img src="screenshots/Healium-home-page.png" alt="Screenshot of Healium home page">
-            </a>
-            <a href="screenshots/Healium-projects.png" target="_blank">
-                <img src="screenshots/Healium-projects.png" alt="Screenshot of Healium project cards">
-            </a>
-            <a href="screenshots/Healium-pledge.png" target="_blank">
-                <img src="screenshots/Healium-pledge.png" alt="Screenshot of Healium project page with pledge form">
-            </a>
-        </div>
-        <div>
-            <h2>Brief</h2>
-            <p>Create a crowdfunding website using Django Rest Framework (DRF) for the backend, and JavaScript React for frontend.</p>
-            <p>I decided to theme the website around people who've experienced family and domestic abuse. I chose this theme based on
-                my background experience in emergency services. </p>
-            <p>Some of the features for this website include:</p>
-            <ul>
-                <li>random generated usernames to retain anonymity and avoid accidental disclosure of name</li>
-                <li>quick-exit feature as a safety precaution</li>
-                <li>create a new fundraising project</li>
-                <li>pledge an amount to an existing project</li>
-            </ul>
-            <p>You can view the full <a href="https://github.com/what-the-hek/crowdfunding">front-end code</a> and 
-                <a href="https://github.com/SheCodesAus/she-codes-crowdfunding-api-project-what-the-hek"> back-end code</a> on GitHub.</p>
-            <p>Visit the <a href="https://keen-gecko-1cbdfe.netlify.app/">Healium</a> website, hosted on Netlify.</p>
-        </div>
+            <div class="video">
+                <iframe src="https://youtube.com/embed/c-oBmtCUVyU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen alt="Youtube video of Flappy Bird game play with walk-through of code improvements"></iframe>
+            </div>
+            <div>
+                <h2>Project brief</h2>
+                <p>This crowdfunding website was created in early 2023 as part of the She Codes Plus program in Perth Western Australia.
+                </p>
+                <p>Create a crowdfunding website using Django Rest Framework (DRF) for the backend, and JavaScript React for frontend.</p>
+                <p>I decided to theme the website around people who've experienced family and domestic abuse. I chose this theme based on
+                    my background experience in emergency services. </p>
+                <p>Some of the features for this website include:</p>
+                <ul>
+                    <li>random generated usernames to retain anonymity and avoid accidental disclosure of name</li>
+                    <li>quick-exit feature as a safety precaution</li>
+                    <li>create a new fundraising project</li>
+                    <li>pledge an amount to an existing project</li>
+                </ul>
+            </div>
+            <div id="intro">
+                <h2>Screenshots</h2>
+                <a href="screenshots/Healium-home-page.png" target="_blank">
+                    <img src="screenshots/Healium-home-page.png" alt="Screenshot of Healium home page">
+                </a>
+                <a href="screenshots/Healium-projects.png" target="_blank">
+                    <img src="screenshots/Healium-projects.png" alt="Screenshot of Healium project cards">
+                </a>
+                <a href="screenshots/Healium-pledge.png" target="_blank">
+                    <img src="screenshots/Healium-pledge.png" alt="Screenshot of Healium project page with pledge form">
+                </a>
+            </div>
+            <div id="intro">
+                <h2>Links</h2>   
+                <a class="contact-me" href="https://keen-gecko-1cbdfe.netlify.app/">Healium website</a>
+                <a class="contact-me" href="https://github.com/what-the-hek/crowdfunding">Front-end code</a>
+                <a class="contact-me" href="https://github.com/SheCodesAus/she-codes-crowdfunding-api-project-what-the-hek">Back-end code</a>
+            </div>         
         <section>
     </main>
     <footer>
