--- a/flappy-pig.html
+++ b/flappy-pig.html
@@ -25,12 +25,11 @@
     <main>
         <h1>Flappy pig</h1>
         <section id="projects">
-        <div>
-            <!-- <h2>Game play</h2> -->
+        <div class="video">
             <iframe src="https://www.youtube.com/embed/9Mwzu6QFaTg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen alt="Youtube video of Flappy Bird game play with walk-through of code improvements"></iframe>
         </div>
         <div>
-            <h2>Brief</h2>
+            <h2>Project brief</h2>
             <p>Flappy Pig is a farm-themed version of the popular 2013 game, Flappy Bird.</p>
             <p>I was provided source-code as part of Harvards CS50 Introduction to game design course.</p>
             <p>Using Lua and Love2D, I edited the existing code to enhance game play including:</p>
