--- a/koorta.html
+++ b/koorta.html
@@ -25,34 +25,33 @@
     <main>
         <h1>Koorta</h1>
         <section id="projects">
-        <div>
-            <!-- <iframe src="https://youtube.com/embed/c-oBmtCUVyU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen alt="Youtube video of Flappy Bird game play with walk-through of code improvements"></iframe> -->
-
-            <!-- <h2>Screenshots</h2> -->
-            <a href="images/koorta1.png" target="_blank">
-                <img src="images/koorta1.png" alt="Screenshot of Koorta playthrough">
-            </a>
-            <!-- <a href="screenshots/Healium-projects.png" target="_blank">
-                <img src="screenshots/Healium-projects.png" alt="Screenshot of Healium project cards">
-            </a>
-            <a href="screenshots/Healium-pledge.png" target="_blank">
-                <img src="screenshots/Healium-pledge.png" alt="Screenshot of Healium project page with pledge form">
-            </a> -->
-        </div>
-        <div>
-            <h2>Brief</h2>
-            <p>As a team of five, create a game using the theme "connection". this game was created during a 2 day game jam run by <a href="https://levelherup.com.au/">Level Her Up</a></p>
-            <p>I was responsible for programming the game using Unity and C#.</p>
-            <p>Some of the features for the game include:</p>
-            <ul>
-                <li>random generated directions for left, right, up and down arrows</li>
-                <li>user keyboard input triggers specific animations for spider to make it dance</li>
-                <li>hidden counter to track the number of matching user actions to directions</li>
-                <li>messages to indicate a win or loss based on threshold (7 out of 10 dance correct moves)</li>
-            </ul>
-            <p>You can view the <a href="https://github.com/what-the-hek/spider-game">Unity files and code</a> on Github.</p> 
-            <p>Koorta will be available on itch.io soon, stay tuned!</p>
-        </div>
+            <!-- <div class="video">
+                <iframe src="https://youtube.com/embed/c-oBmtCUVyU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen alt="Youtube video of Flappy Bird game play with walk-through of code improvements"></iframe>
+            </div> -->
+            <div>
+                <h2>Project brief</h2>
+                <p>As a team of five, create a game using the theme "connection". this game was created during a 2 day game jam run by <a class=".p-link" href="https://levelherup.com.au/">Level Her Up</a></p>
+                <p>I was responsible for programming the game using Unity and C#.</p>
+                <p>Some of the features for the game include:</p>
+                <ul>
+                    <li>random generated directions for left, right, up and down arrows</li>
+                    <li>user keyboard input triggers specific animations for spider to make it dance</li>
+                    <li>hidden counter to track the number of matching user actions to directions</li>
+                    <li>messages to indicate a win or loss based on threshold (7 out of 10 dance correct moves)</li>
+                </ul>
+                <p>Koorta will be available on itch.io soon, stay tuned!</p>
+            </div>
+            <div class="intro">
+                <h2>Screenshots</h2>
+                <a href="images/koorta1.png" target="_blank">
+                    <img src="images/koorta1.png" alt="Screenshot of Koorta playthrough">
+                </a>
+            </div>
+            <div id="intro">
+                <h2>Links</h2>
+                <a class="contact-me" href="https://github.com/what-the-hek/spider-game">Unity files and code</a>
+                <a class="contact-me" href="">Game on itch.io coming soon!</a>
+            </div>  
         <section>
     </main>
     <footer>
