--- a/news.html
+++ b/news.html
@@ -25,23 +25,26 @@
     <main>
         <h1>News site</h1>
         <section id="projects">
-        <div>
-            <iframe src="https://www.youtube.com/embed/L_kt5VzdSQA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen alt="Youtube video of Flappy Bird game play with walk-through of code improvements"></iframe>
-        </div>
-        <div>
-            <h2>Brief</h2>
-            <p>This project was to combine my knowledge of python, HTML, CSS and Django to create a news website.</p>
-            <p>The brief was to create a site that people could use to:</p>
-            <ul>
-                <li>create a user account</li>
-                <li>read news stories</li>
-                <li>create news stories</li>
-                <li>comment on news stories</li>
-                <li>delete news stories.</li>
-            </ul>
-            <p>You can view the full code on <a href="https://github.com/what-the-hek/she-codes-django-news-project-what-the-hek">GitHub</a>
-                and <a href="screenshots/Jess-Hek-Django-Submission.docx" download target="_blank">view more screenshots</a>.</p>
-        </div>
+            <div class="video">
+                <iframe src="https://www.youtube.com/embed/L_kt5VzdSQA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen alt="Youtube video of Flappy Bird game play with walk-through of code improvements"></iframe>
+            </div>
+            <div>
+                <h2>Project brief</h2>
+                <p>This project was to combine my knowledge of python, HTML, CSS and Django to create a news website.</p>
+                <p>The brief was to create a site that people could use to:</p>
+                <ul>
+                    <li>create a user account</li>
+                    <li>read news stories</li>
+                    <li>create news stories</li>
+                    <li>comment on news stories</li>
+                    <li>delete news stories.</li>
+                </ul>
+            </div>
+            <div id="intro">
+                <h2>Links</h2>   
+                <a class="contact-me" href="https://github.com/what-the-hek/she-codes-django-news-project-what-the-hek">GitHub code</a>
+                <a class="contact-me" href="screenshots/Jess-Hek-Django-Submission.docx" download target="_blank">Download screenshots</a> 
+            </div>  
         <section>
     </main>
     <footer>
