--- a/portfolio.html
+++ b/portfolio.html
@@ -25,20 +25,23 @@
     <main>
         <h1>My portfolio</h1>
         <section id="projects">
-        <div>
-            <!-- <h2>Wireframe</h2> -->
-            <a href="screenshots/20221016_090013.jpg" target="_blank">
-                <img src="screenshots/20221016_090013.jpg" alt="Draft wireframe for this portfolio">
-            </a>
-        </div>
-        <div>
-            <h2>Brief</h2>
-            <p>This is the first project I completed as part of the She Codes Plus program in 2022.</p>
-            <p>I started by drafting a wireframe to get the structure of my portfolio. I used HTMl and 
-                CSS to create the portfolio in Visual Studio Code and published it to GitHub.</p>
-            <p>This portfolio is responsive and includes a bio, contact form, and links to coding projects.</p>
-            <p>You can view the code on <a href="https://github.com/what-the-hek/what-the-hek.github.io">GitHub</a>.</p>
-        </div>
+            <div>
+                <h2>Project brief</h2>
+                <p>This is the first project I completed as part of the She Codes Plus program in 2022.</p>
+                <p>I started by drafting a wireframe to get the structure of my portfolio. I used HTMl and 
+                    CSS to create the portfolio in Visual Studio Code and published it to GitHub.</p>
+                <p>This portfolio is responsive and includes a bio, contact form, and links to coding projects.</p>
+            </div>
+            <!-- <div>
+                <h2>Wire</h2>
+                <a href="screenshots/20221016_090013.jpg" target="_blank">
+                    <img src="screenshots/20221016_090013.jpg" alt="Draft wireframe for this portfolio">
+                </a>
+            </div> -->
+            <div id="intro">
+                <h2>Links</h2>   
+                <a class="contact-me" href="https://github.com/what-the-hek/what-the-hek.github.io">GitHub code</a>
+            </div>  
         <section>
     </main>
     <footer>
