--- a/weather.html
+++ b/weather.html
@@ -25,25 +25,28 @@
     <main>
         <h1>Weather app</h1>
         <section id="projects">
-        <div>
-            <!-- <h2>Screenshots</h2> -->
-            <a href="screenshots/python-feedback.PNG" target="_blank">
-                <img src="screenshots/python-feedback.PNG" alt="Screenshot of positive feedback from She Codes Plus lead mentor for python">
-            </a>
-            <a href="screenshots/python-test-results.png" target="_blank">
-                <img src="screenshots/python-test-results.png" alt="Screenshot of all code passing the tests">
-            </a>
-            <a href="screenshots/python-weather.PNG" target="_blank">
-                <img src="screenshots/python-weather.PNG" alt="Screenshot of some python code from the weather app">
-            </a>
-        </div>
-        <div>
-            <h2>Brief</h2>
-            <p>This project was my first introduction to python as part of the She Codes Plus program.</p>
-            <p>My task was to process different csv files containing data about the weather, and convert them into meaningful text-based summaries so they can be read by people.</p>
-            <p>I received positive feedback about my python code for this project from the lead python mentor.</p>
-            <p>You can view the full code on <a href="https://github.com/what-the-hek/she-codes-python-weather-project-what-the-hek">GitHub</a>.</p>
-        </div>
+            <div>
+                <h2>Project brief</h2>
+                <p>This project was my first introduction to python as part of the She Codes Plus program.</p>
+                <p>My task was to process different csv files containing data about the weather, and convert them into meaningful text-based summaries so they can be read by people.</p>
+                <p>I received positive feedback about my python code for this project from the lead python mentor.</p>
+            </div>
+            <div class="intro">
+                <h2>Screenshots</h2>
+                <a href="screenshots/python-feedback.PNG" target="_blank">
+                    <img src="screenshots/python-feedback.PNG" alt="Screenshot of positive feedback from She Codes Plus lead mentor for python">
+                </a>
+                <a href="screenshots/python-test-results.png" target="_blank">
+                    <img src="screenshots/python-test-results.png" alt="Screenshot of all code passing the tests">
+                </a>
+                <a href="screenshots/python-weather.PNG" target="_blank">
+                    <img src="screenshots/python-weather.PNG" alt="Screenshot of some python code from the weather app">
+                </a>
+            </div>
+            <div id="intro">
+                <h2>Links</h2>   
+                <a class="contact-me" href="https://github.com/what-the-hek/she-codes-python-weather-project-what-the-hek">GitHub code</a>
+           </div>  
         <section>
     </main>
     <footer>
