minor text changes

--- a/crowdfunding.html
+++ b/crowdfunding.html
@@ -23,7 +23,7 @@
         </nav>
     </header>
     <main>
-        <h1>Crowdfunding website</h1>
+        <h1>Healium</h1>
         <section id="projects">
             <div class="video">
                 <iframe src="https://youtube.com/embed/c-oBmtCUVyU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen alt="Youtube video of Flappy Bird game play with walk-through of code improvements"></iframe>
@@ -58,8 +58,8 @@
             <div id="intro">
                 <h2>Links</h2>   
                 <a class="contact-me" href="https://keen-gecko-1cbdfe.netlify.app/">Healium website</a>
-                <a class="contact-me" href="https://github.com/what-the-hek/crowdfunding">Front-end code</a>
-                <a class="contact-me" href="https://github.com/SheCodesAus/she-codes-crowdfunding-api-project-what-the-hek">Back-end code</a>
+                <a class="contact-me" href="https://github.com/what-the-hek/crowdfunding">GitHub (front-end)</a>
+                <a class="contact-me" href="https://github.com/SheCodesAus/she-codes-crowdfunding-api-project-what-the-hek">GitHub (back-end)</a>
             </div>         
         <section>
     </main>
