--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
             <div>
                 <a class="card" href="koorta.html">
                     <img src="images/koorta1.png" alt="Screenshot of Koorta dancing spider game playthrough">
-                    <p class="card-title">Koorta dancing spider game</p>
+                    <p class="card-title">Koorta</p>
                     <p>A 3D game where you make the spider dance, inspired by the local peacock spider in Perth, Western Australia.</p>
                     <i>Unity</i>
                     <i>C#</i>
                 </a>
                 <a class="card" href="crowdfunding.html">
                     <img src="screenshots/Healium-home-page.png" alt="Screenshot of Healium crowdfunding home page">
-                    <p class="card-title">Crowdfunding website</p>
+                    <p class="card-title">Healium</p>
                     <p>A crowdfunding website aimed at helping people financially recover from family and domestic abuse.</p>
                     <i>React</i>
                     <i>JavaScript</i>
@@ -67,7 +67,7 @@
                 </a>
                 <a class="card" href="news.html">
                     <img src="screenshots/django-news.png" alt="Screenshot of front page for news site">
-                    <p class="card-title">News site</p>
+                    <p class="card-title">She Codes News</p>
                     <p>A website where people can create an account and post news stories.</p>
                     <i>Python</i>
                     <i>Django</i>
