--- a/koorta.html
+++ b/koorta.html
@@ -49,7 +49,7 @@
             </div>
             <div id="intro">
                 <h2>Links</h2>
-                <a class="contact-me" href="https://github.com/what-the-hek/spider-game">Unity files and code</a>
+                <a class="contact-me" href="https://github.com/what-the-hek/spider-game">GitHub</a>
                 <a class="contact-me" href="">Game on itch.io coming soon!</a>
             </div>  
         <section>
