--- a/news.html
+++ b/news.html
@@ -23,7 +23,7 @@
         </nav>
     </header>
     <main>
-        <h1>News site</h1>
+        <h1>She Codes News</h1>
         <section id="projects">
             <div class="video">
                 <iframe src="https://www.youtube.com/embed/L_kt5VzdSQA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen alt="Youtube video of Flappy Bird game play with walk-through of code improvements"></iframe>
@@ -42,7 +42,7 @@
             </div>
             <div id="intro">
                 <h2>Links</h2>   
-                <a class="contact-me" href="https://github.com/what-the-hek/she-codes-django-news-project-what-the-hek">GitHub code</a>
+                <a class="contact-me" href="https://github.com/what-the-hek/she-codes-django-news-project-what-the-hek">GitHub</a>
                 <a class="contact-me" href="screenshots/Jess-Hek-Django-Submission.docx" download target="_blank">Download screenshots</a> 
             </div>  
         <section>
