--- a/portfolio.html
+++ b/portfolio.html
@@ -40,7 +40,7 @@
             </div> -->
             <div id="intro">
                 <h2>Links</h2>   
-                <a class="contact-me" href="https://github.com/what-the-hek/what-the-hek.github.io">GitHub code</a>
+                <a class="contact-me" href="https://github.com/what-the-hek/what-the-hek.github.io">GitHub</a>
             </div>  
         <section>
     </main>
