--- a/weather.html
+++ b/weather.html
@@ -45,7 +45,7 @@
             </div>
             <div id="intro">
                 <h2>Links</h2>   
-                <a class="contact-me" href="https://github.com/what-the-hek/she-codes-python-weather-project-what-the-hek">GitHub code</a>
+                <a class="contact-me" href="https://github.com/what-the-hek/she-codes-python-weather-project-what-the-hek">GitHub</a>
            </div>  
         <section>
     </main>
