added to koorta and fixed styling

--- a/crowdfunding.html
+++ b/crowdfunding.html
@@ -43,7 +43,7 @@
                     <li>pledge an amount to an existing project</li>
                 </ul>
             </div>
-            <div id="intro">
+            <div class="intro">
                 <h2>Screenshots</h2>
                 <a href="screenshots/Healium-home-page.png" target="_blank">
                     <img src="screenshots/Healium-home-page.png" alt="Screenshot of Healium home page">
@@ -55,7 +55,7 @@
                     <img src="screenshots/Healium-pledge.png" alt="Screenshot of Healium project page with pledge form">
                 </a>
             </div>
-            <div id="intro">
+            <div class="intro">
                 <h2>Links</h2>   
                 <a class="contact-me" href="https://keen-gecko-1cbdfe.netlify.app/">Healium website</a>
                 <a class="contact-me" href="https://github.com/what-the-hek/crowdfunding">GitHub (front-end)</a>
