--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <h2>Recent projects</h2>
             <div>
                 <a class="card" href="koorta.html">
-                    <img src="images/koorta1.png" alt="Screenshot of Koorta dancing spider game playthrough">
+                    <img src="screenshots/Koorta1.png" alt="Screenshot of Koorta dancing spider game playthrough">
                     <p class="card-title">Koorta</p>
                     <p>A 3D game where you make the spider dance, inspired by the local peacock spider in Perth, Western Australia.</p>
                     <i>Unity</i>
