--- a/koorta.html
+++ b/koorta.html
@@ -39,18 +39,33 @@
                     <li>hidden counter to track the number of matching user actions to directions</li>
                     <li>messages to indicate a win or loss based on threshold (7 out of 10 dance correct moves)</li>
                 </ul>
-                <p>Koorta will be available on itch.io soon, stay tuned!</p>
+                <p>Koorta is now available to play on itch.io!</p>
             </div>
             <div class="intro">
                 <h2>Screenshots</h2>
-                <a href="images/koorta1.png" target="_blank">
-                    <img src="images/koorta1.png" alt="Screenshot of Koorta playthrough">
+                <a href="screenshots/Koorta.png" target="_blank">
+                    <img src="screenshots/Koorta.png" alt="Screenshot of Koorta playthrough">
+                </a>
+                <a href="screenshots/Koorta1.png" target="_blank">
+                    <img src="screenshots/Koorta1.png" alt="Screenshot of Koorta playthrough">
+                </a>
+                <a href="screenshots/Koorta2.png" target="_blank">
+                    <img src="screenshots/Koorta2.png" alt="Screenshot of Koorta playthrough">
+                </a>
+                <a href="screenshots/Koorta3.png" target="_blank">
+                    <img src="screenshots/Koorta3.png" alt="Screenshot of Koorta playthrough">
+                </a>
+                <a href="screenshots/Koorta4.png" target="_blank">
+                    <img src="screenshots/Koorta4.png" alt="Screenshot of Koorta playthrough">
+                </a>
+                <a href="screenshots/Koorta5.png" target="_blank">
+                    <img src="screenshots/Koorta5.png" alt="Screenshot of Koorta playthrough">
                 </a>
             </div>
-            <div id="intro">
+            <div class="intro">
                 <h2>Links</h2>
                 <a class="contact-me" href="https://github.com/what-the-hek/spider-game">GitHub</a>
-                <a class="contact-me" href="">Game on itch.io coming soon!</a>
+                <a class="contact-me" href="https://whatthehek.itch.io/koorta">Play Koorta</a>
             </div>  
         <section>
     </main>
