--- a/news.html
+++ b/news.html
@@ -40,7 +40,7 @@
                     <li>delete news stories.</li>
                 </ul>
             </div>
-            <div id="intro">
+            <div class="intro">
                 <h2>Links</h2>   
                 <a class="contact-me" href="https://github.com/what-the-hek/she-codes-django-news-project-what-the-hek">GitHub</a>
                 <a class="contact-me" href="screenshots/Jess-Hek-Django-Submission.docx" download target="_blank">Download screenshots</a> 
