--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,7 @@
                     <img src="screenshots/20221016_090013.jpg" alt="Draft wireframe for this portfolio">
                 </a>
             </div> -->
-            <div id="intro">
+            <div class="intro">
                 <h2>Links</h2>   
                 <a class="contact-me" href="https://github.com/what-the-hek/what-the-hek.github.io">GitHub</a>
             </div>  
