--- a/weather.html
+++ b/weather.html
@@ -43,7 +43,7 @@
                     <img src="screenshots/python-weather.PNG" alt="Screenshot of some python code from the weather app">
                 </a>
             </div>
-            <div id="intro">
+            <div class="intro">
                 <h2>Links</h2>   
                 <a class="contact-me" href="https://github.com/what-the-hek/she-codes-python-weather-project-what-the-hek">GitHub</a>
            </div>  
