--- a/projects.html
+++ b/projects.html
@@ -25,25 +25,10 @@
         </nav>
     </header>
     <main>
-        <!-- ABOUT ME -->
         <section>
-            <h1>Jessica Hek</h1>
-            <div>
-                <img id="profile-img" src="images/bio-pic3.png" alt="Profile picture of Jessica Hek">
-                <div>
-                    <p>
-                    I'm a full stack developer with a background in business process improvement, policy development and communications.
-                    <br/><br/>
-                    I completed the She Codes Plus program in early 2023 and now return as a mentor. 
-                    </p>
-                    <a class="button" href="images/Jessica-Hek.pdf" download target="_blank">Download resume</a>
-                    <a class="button" href="contact.html">Contact me</a>
-                </div>
-            </div>
+            <h1>All projects</h1>
         </section>
-        <!-- PROJECTS -->
         <section class="projects">
-            <h2>Featured projects</h2>
             <a class="card" href="koorta.html">
                 <img src="screenshots/Koorta1.png" alt="Screenshot of Koorta dancing spider game playthrough">
                 <h3>Koorta</h3>
@@ -87,9 +72,9 @@
                 <i>HTML</i>
                 <i>CSS</i>
             </a>
-            <a href="projects.html">View more projects</a>
         </section>
-    </main> 
-    <footer></footer>
+    </main>
+    <footer>
+
+    </footer>
 </body>
-</html>
