--- a/crowdfunding.html
+++ b/crowdfunding.html
@@ -19,7 +19,7 @@
             <a href="index.html">Home</a>
             <a href="https://www.linkedin.com/in/jessicahek/" target="_blank">LinkedIn</a>
             <a href="https://github.com/what-the-hek" target="_blank">GitHub</a>
-            <a class="contact-me" href="contact.html">Contact me</a>
+            <a class="button" href="contact.html">Contact me</a>
         </nav>
     </header>
     <main>
@@ -57,9 +57,9 @@
             </div>
             <div class="intro">
                 <h2>Links</h2>   
-                <a class="contact-me" href="https://keen-gecko-1cbdfe.netlify.app/">Healium website</a>
-                <a class="contact-me" href="https://github.com/what-the-hek/crowdfunding">GitHub (front-end)</a>
-                <a class="contact-me" href="https://github.com/SheCodesAus/she-codes-crowdfunding-api-project-what-the-hek">GitHub (back-end)</a>
+                <a class="button" href="https://keen-gecko-1cbdfe.netlify.app/">Healium website</a>
+                <a class="button" href="https://github.com/what-the-hek/crowdfunding">GitHub (front-end)</a>
+                <a class="button" href="https://github.com/SheCodesAus/she-codes-crowdfunding-api-project-what-the-hek">GitHub (back-end)</a>
             </div>         
         <section>
     </main>
