--- a/koorta.html
+++ b/koorta.html
@@ -19,13 +19,15 @@
             <a href="index.html">Home</a>
             <a href="https://www.linkedin.com/in/jessicahek/" target="_blank">LinkedIn</a>
             <a href="https://github.com/what-the-hek" target="_blank">GitHub</a>
-            <a class="contact-me" href="contact.html">Contact me</a>
+            <a class="button" href="contact.html">Contact me</a>
         </nav>
     </header>
     <main>
+        <section>
         <h1>Koorta</h1>
-        <section id="projects">
-            <div class="video">
+        </section>
+        <section class="projects">
+            <div>
                 <iframe src="https://youtube.com/embed/KakfCV3yl28" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen alt="Youtube video of Flappy Bird game play with walk-through of code improvements"></iframe>
             </div>
             <div>
@@ -41,7 +43,7 @@
                 </ul>
                 <p>Koorta is now available to play on itch.io!</p>
             </div>
-            <div class="intro">
+            <div>
                 <h2>Screenshots</h2>
                 <a href="screenshots/Koorta.png" target="_blank">
                     <img src="screenshots/Koorta.png" alt="Screenshot of Koorta playthrough">
@@ -62,10 +64,10 @@
                     <img src="screenshots/Koorta5.png" alt="Screenshot of Koorta playthrough">
                 </a>
             </div>
-            <div class="intro">
+            <div>
                 <h2>Links</h2>
-                <a class="contact-me" href="https://github.com/what-the-hek/spider-game">GitHub</a>
-                <a class="contact-me" href="https://whatthehek.itch.io/koorta">Play Koorta</a>
+                <a class="button" href="https://github.com/what-the-hek/spider-game">GitHub</a>
+                <a class="button" href="https://whatthehek.itch.io/koorta">Play Koorta</a>
             </div>  
         <section>
     </main>
