--- a/news.html
+++ b/news.html
@@ -19,7 +19,7 @@
             <a href="index.html">Home</a>
             <a href="https://www.linkedin.com/in/jessicahek/" target="_blank">LinkedIn</a>
             <a href="https://github.com/what-the-hek" target="_blank">GitHub</a>
-            <a class="contact-me" href="contact.html">Contact me</a>
+            <a class="button" href="contact.html">Contact me</a>
         </nav>
     </header>
     <main>
@@ -42,8 +42,8 @@
             </div>
             <div class="intro">
                 <h2>Links</h2>   
-                <a class="contact-me" href="https://github.com/what-the-hek/she-codes-django-news-project-what-the-hek">GitHub</a>
-                <a class="contact-me" href="screenshots/Jess-Hek-Django-Submission.docx" download target="_blank">Download screenshots</a> 
+                <a class="button" href="https://github.com/what-the-hek/she-codes-django-news-project-what-the-hek">GitHub</a>
+                <a class="button" href="screenshots/Jess-Hek-Django-Submission.docx" download target="_blank">Download screenshots</a> 
             </div>  
         <section>
     </main>
