--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
             <a href="index.html">Home</a>
             <a href="https://www.linkedin.com/in/jessicahek/" target="_blank">LinkedIn</a>
             <a href="https://github.com/what-the-hek" target="_blank">GitHub</a>
-            <a class="contact-me" href="contact.html">Contact me</a>
+            <a class="button" href="contact.html">Contact me</a>
         </nav>
     </header>
     <main>
@@ -40,7 +40,7 @@
             </div> -->
             <div class="intro">
                 <h2>Links</h2>   
-                <a class="contact-me" href="https://github.com/what-the-hek/what-the-hek.github.io">GitHub</a>
+                <a class="button" href="https://github.com/what-the-hek/what-the-hek.github.io">GitHub</a>
             </div>  
         <section>
     </main>
