structure and style changes

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jessica Hek</title>
+    <title>About me</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -30,30 +30,17 @@
         <section>
             <h1>Jessica Hek</h1>
             <div>
-                <!-- <img id="profile-img" src="images/bio-pic3.png" alt="Profile picture of Jessica Hek"> -->
+                <img id="profile-img" src="images/bio-pic3.png" alt="Profile picture of Jessica Hek">
                 <div>
-                    <p class="intro">
-                    Full stack developer | She Codes mentor | Hobbyist game developer
+                    <p>
+                    I'm a full stack developer with a background in business process improvement, policy development and communications.
+                    <br/><br/>
+                    I completed the She Codes Plus program in early 2023 and now return as a mentor. 
                     </p>
-                    <a class="button" href="about.html">About me</a>
-                    <a class="button" href="projects.html">View projects</a>
+                    <a class="button" href="images/Jessica-Hek.pdf" download target="_blank">Download resume</a>
                     <a class="button" href="contact.html">Contact me</a>
                 </div>
             </div>
-        </section>
-        <!-- PROJECTS -->
-        <section class="projects">
-            <h2>Featured projects</h2>
-            <a class="card" href="koorta.html">
-                <img src="screenshots/Koorta1.png" alt="Screenshot of Koorta dancing spider game playthrough">
-                <h3>Koorta</h3>
-                <p>Dancing spider game inspired by the local peacock spider from Perth, Western Australia.</p>
-            </a>
-            <a class="card" href="flappy-pig.html">
-                <img src="images/flappypig1.PNG" alt="Screenshot of flappy pig game">
-                <h3>Flappy pig</h3>
-                <p>Farm-themed version of the 2013 game, Flappy Bird</p>
-            </a>
         </section>
     </main> 
     <footer></footer>
