--- a/showcase/tech-diversity.html
+++ b/showcase/tech-diversity.html
@@ -27,7 +27,7 @@
             </div>
             <a href="showcase.html" id="btn">All projects</a>
         </section>
-
+<!-- link to github https://github.com/SheCodesAus/tech_the_halls_2023_group_frontend -->
         <div class="filler"></div>
 
         <section class="showcase-section">
