--- a/flappy-pig.html
+++ b/flappy-pig.html
@@ -17,6 +17,8 @@
         </div> 
         <nav class="menu">
             <a href="index.html">Home</a>
+            <a href="projects.html">Projects</a>
+            <a href="about.html">About me</a>
             <a href="https://www.linkedin.com/in/jessicahek/" target="_blank">LinkedIn</a>
             <a href="https://github.com/what-the-hek" target="_blank">GitHub</a>
             <a class="button" href="contact.html">Contact me</a>
