blue everything, new font, restructure files

--- a/index.html
+++ b/index.html
@@ -22,37 +22,34 @@
             <a href="about.html">About me</a>
             <a href="https://www.linkedin.com/in/jessicahek/" target="_blank">LinkedIn</a>
             <a href="https://github.com/what-the-hek" target="_blank">GitHub</a>
-            <a class="button" href="contact.html">Contact me</a>
+            <a href="contact.html">Contact me</a>
         </nav>
     </header>
     <main>
         <!-- ABOUT ME -->
         <section>
             <h1>Jessica Hek</h1>
+            <p class="intro">
+                Full stack developer | She Codes mentor | Hobbyist game developer
+            </p>
             <div>
-                <!-- <img id="profile-img" src="images/bio-pic3.png" alt="Profile picture of Jessica Hek"> -->
-                <div>
-                    <p class="intro">
-                    Full stack developer | She Codes mentor | Hobbyist game developer
-                    </p>
-                    <a class="button" href="about.html">About me</a>
-                    <a class="button" href="projects.html">View projects</a>
-                    <a class="button" href="contact.html">Contact me</a>
-                </div>
+                <a class="button" href="projects.html">View projects</a>
+                <a class="button" href="about.html">About me</a>
+                <a class="button" href="contact.html">Contact me</a>
             </div>
         </section>
         <!-- PROJECTS -->
         <section class="projects">
             <h2>Featured projects</h2>
-            <a class="card" href="koorta.html">
+            <a class="card" href="projects/koorta.html">
                 <img src="screenshots/Koorta1.png" alt="Screenshot of Koorta dancing spider game playthrough">
                 <h3>Koorta</h3>
                 <p>Dancing spider game inspired by the local peacock spider from Perth, Western Australia.</p>
             </a>
-            <a class="card" href="flappy-pig.html">
+            <a class="card" href="projects/flappy-pig.html">
                 <img src="images/flappypig1.PNG" alt="Screenshot of flappy pig game">
                 <h3>Flappy pig</h3>
-                <p>Farm-themed version of the 2013 game, Flappy Bird</p>
+                <p>Farm-themed version of the 2013 game, Flappy Bird.</p>
             </a>
         </section>
     </main> 
