--- a/about.html
+++ b/about.html
@@ -22,22 +22,35 @@
             <a href="about.html">About me</a>
             <a href="https://www.linkedin.com/in/jessicahek/" target="_blank">LinkedIn</a>
             <a href="https://github.com/what-the-hek" target="_blank">GitHub</a>
-            <a class="button" href="contact.html">Contact me</a>
+            <a href="contact.html">Contact me</a>
         </nav>
     </header>
     <main>
         <!-- ABOUT ME -->
         <section>
-            <h1>Jessica Hek</h1>
+            <h1>About me</h1>
             <div>
                 <img id="profile-img" src="images/bio-pic3.png" alt="Profile picture of Jessica Hek">
                 <div>
+                    <h2>Hello, I'm Jess</h2>
                     <p>
-                    I'm a full stack developer with a background in business process improvement, policy development and communications.
-                    <br/><br/>
-                    I completed the She Codes Plus program in early 2023 and now return as a mentor. 
+                    I'm a full stack developer based in Perth, Western Australia. <br><br>
+                    I'm currently employed by BHP where I help create bespoke websites and apps for internal customers.
                     </p>
-                    <a class="button" href="images/Jessica-Hek.pdf" download target="_blank">Download resume</a>
+                    <h2>My journey</h2>
+                    <p>
+                    I worked in government for almost 16 years before becoming a developer. <br><br>
+                    My background is mostly in an emergency services environment specialising in business process improvement, policy development and communications. <br><br>
+                    In early 2022 I decided it was time for a career change and hired a career consultant to help me on my journey. <br><br>
+                    After some research and self-analysis I applied for the <a href="https://shecodes.com.au/" target="_blank">She Codes Plus program</a>, which I completed in May of 2023. <br><br>
+                    From there I began applying for jobs as a developer and started delving more into game development as a hobby. <br><br>
+                    This included attending workshops hosted by <a href="https://levelherup.com.au/" target="_blank">Level Her Up</a> to learn more about the different aspects of game development. <br><br>
+                    I'm continuing online studies so you'll see projects added to my portfolio as I build my skills. <br><br>
+                    If you'd like to know more check out my GitHub, LinkedIn profile or contact me using the form. <br><br>
+                    </p>
+                    <!-- <a class="button" href="images/Jessica-Hek.pdf" download target="_blank">Download resume</a> -->
+                    <a class="button" href="https://github.com/what-the-hek" target="_blank">GitHub</a>
+                    <a class="button" href="https://www.linkedin.com/in/jessicahek/" target="_blank">LinkedIn</a>
                     <a class="button" href="contact.html">Contact me</a>
                 </div>
             </div>
