--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
             <a href="about.html">About me</a>
             <a href="https://www.linkedin.com/in/jessicahek/" target="_blank">LinkedIn</a>
             <a href="https://github.com/what-the-hek" target="_blank">GitHub</a>
-            <a class="button" href="contact.html">Contact me</a>
+            <a href="contact.html">Contact me</a>
         </nav>
     </header>
     <main>
