--- a/projects.html
+++ b/projects.html
@@ -22,22 +22,22 @@
             <a href="about.html">About me</a>
             <a href="https://www.linkedin.com/in/jessicahek/" target="_blank">LinkedIn</a>
             <a href="https://github.com/what-the-hek" target="_blank">GitHub</a>
-            <a class="button" href="contact.html">Contact me</a>
+            <a href="contact.html">Contact me</a>
         </nav>
     </header>
     <main>
         <section>
-            <h1>All projects</h1>
+            <h1>Projects</h1>
         </section>
         <section class="projects">
-            <a class="card" href="koorta.html">
+            <a class="card" href="projects/koorta.html">
                 <img src="screenshots/Koorta1.png" alt="Screenshot of Koorta dancing spider game playthrough">
                 <h3>Koorta</h3>
                 <p>A 3D game where you make the spider dance, inspired by the local peacock spider in Perth, Western Australia.</p>
                 <i>Unity</i>
                 <i>C#</i>
             </a>
-            <a class="card" href="crowdfunding.html">
+            <a class="card" href="projects/crowdfunding.html">
                 <img src="screenshots/Healium-home-page.png" alt="Screenshot of Healium crowdfunding home page">
                 <h3>Healium</h3>
                 <p>A crowdfunding website aimed at helping people financially recover from family and domestic abuse.</p>
@@ -45,13 +45,13 @@
                 <i>JavaScript</i>
                 <i>Django Rest Framework</i>
             </a>
-            <a class="card" href="flappy-pig.html">
+            <a class="card" href="projects/flappy-pig.html">
                 <img src="images/flappypig1.PNG" alt="Screenshot of flappy pig game">
                 <h3>Flappy pig</h3>
                 <p>A 2D farm-themed game based on the 2013 game, Flappy Bird</p>
                 <i>Lua</i>
             </a>
-            <a class="card" href="news.html">
+            <a class="card" href="projects/news.html">
                 <img src="screenshots/django-news.png" alt="Screenshot of front page for news site">
                 <h3>She Codes News</h3>
                 <p>A website where people can create an account and post news stories.</p>
@@ -60,13 +60,13 @@
                 <i>HTML</i>
                 <i>CSS</i>
             </a>
-            <a class="card" href="weather.html">
+            <a class="card" href="projects/weather.html">
                 <img src="images/weather-app.jpg" alt="Hand holding a phone with a weather application open">
                 <h3>Weather app</h3>
                 <p>An app that processes csv files containing data about the weather, and converts them into meaningful text-based summaries.</p>
                 <i>Python</i>
             </a>
-            <a class="card" href="portfolio.html">
+            <a class="card" href="projects/portfolio.html">
                 <img src="images/portfolio.jpg" alt="Screenshot of portfolio home page">
                 <h3>My portfolio</h3>
                 <p>This online portfolio, created during the She Codes Plus program</p>
