--- a/projects/portfolio.html
+++ b/projects/portfolio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <header class="checkbox">
@@ -16,12 +16,12 @@
             <span class="line line3"></span>
         </div> 
         <nav class="menu">
-            <a href="index.html">Home</a>
-            <a href="projects.html">Projects</a>
-            <a href="about.html">About me</a>
+            <a href="../index.html">Home</a>
+            <a href="../projects.html">Projects</a>
+            <a href="../about.html">About me</a>
             <a href="https://www.linkedin.com/in/jessicahek/" target="_blank">LinkedIn</a>
             <a href="https://github.com/what-the-hek" target="_blank">GitHub</a>
-            <a class="button" href="contact.html">Contact me</a>
+            <a href="../contact.html">Contact me</a>
         </nav>
     </header>
     <main>
