--- a/projects/weather.html
+++ b/projects/weather.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <header class="checkbox">
@@ -16,12 +16,12 @@
             <span class="line line3"></span>
         </div> 
         <nav class="menu">
-            <a href="index.html">Home</a>
-            <a href="projects.html">Projects</a>
-            <a href="about.html">About me</a>
+            <a href="../index.html">Home</a>
+            <a href="../projects.html">Projects</a>
+            <a href="../about.html">About me</a>
             <a href="https://www.linkedin.com/in/jessicahek/" target="_blank">LinkedIn</a>
             <a href="https://github.com/what-the-hek" target="_blank">GitHub</a>
-            <a class="button" href="contact.html">Contact me</a>
+            <a href="../contact.html">Contact me</a>
         </nav>
     </header>
     <main>
@@ -35,14 +35,14 @@
             </div>
             <div class="intro">
                 <h2>Screenshots</h2>
-                <a href="screenshots/python-feedback.PNG" target="_blank">
-                    <img src="screenshots/python-feedback.PNG" alt="Screenshot of positive feedback from She Codes Plus lead mentor for python">
+                <a href="../screenshots/python-feedback.PNG" target="_blank">
+                    <img src="/screenshots/python-feedback.PNG" alt="Screenshot of positive feedback from She Codes Plus lead mentor for python">
                 </a>
-                <a href="screenshots/python-test-results.png" target="_blank">
-                    <img src="screenshots/python-test-results.png" alt="Screenshot of all code passing the tests">
+                <a href="../screenshots/python-test-results.png" target="_blank">
+                    <img src="/screenshots/python-test-results.png" alt="Screenshot of all code passing the tests">
                 </a>
-                <a href="screenshots/python-weather.PNG" target="_blank">
-                    <img src="screenshots/python-weather.PNG" alt="Screenshot of some python code from the weather app">
+                <a href="../screenshots/python-weather.PNG" target="_blank">
+                    <img src="/screenshots/python-weather.PNG" alt="Screenshot of some python code from the weather app">
                 </a>
             </div>
             <div class="intro">
